# minimax_ci

./: Cargo.toml  LICENSE-MIT  README.md
barm-di/: Cargo.toml
barm-di/src/: macros.rs
barm-proc/: Cargo.toml
barm-proc/src/: lib.rs
barm-proc/tests/: add_tests.rs
example/: Cargo.toml
example/src/: main.rs
minimax-di/: Cargo.toml
minimax-di/src/: lib.rs  macros.rs  service_collection.rs
minimax-proc/: Cargo.toml
minimax-proc/src/: lib.rs
minimax-proc/tests/: service_def_tests.rs  stringify_tests.rs
minimax_di/: Cargo.toml
minimax_di/src/: errors.rs  lib.rs  service_collection.rs  service_provider.rs  service_traits.rs
mixus-di/: Cargo.toml
mixus-di/src/: errors.rs  lib.rs  macros.rs  service_collection.rs  service_provider.rs  service_traits.rs
mixus-proc/: Cargo.toml
mixus-proc/tests/: add_tests.rs  stringify_tests.rs
