[package]
name = "barm-proc"
version = "0.0.1"
authors = ["Maxi <maxi@barmetler.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
itertools = "0.10"
quote = "1.0"