[package]
name = "mixus-proc"
version = "0.0.1"
authors = ["Maxi <maxi@barmetler.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MixusMinimax/mixus-di"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
itertools = "0.10"
quote = "1.0"